fix: space distributor contact card cta on mobile

--- a/src/app/public/pages/distributors/distributors.component.scss
+++ b/src/app/public/pages/distributors/distributors.component.scss
@@ -507,6 +507,12 @@
   &__card--secondary &__cta {
     margin-top: auto;
   }
+
+  @media (max-width: 767px) {
+    &__card--secondary &__cta {
+      margin-top: 60px;
+    }
+  }
 }
 
 .partners-contact {
